# saulve

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
aoc/: __init__.py  app.py  calendar.py  cli.py  errors.py  puzzle.py
aoc/challenges/: __init__.py  advent_of_code.py  base.py
saulve/: __init__.py  app.py  cli.py  errors.py  import_module.py  puzzle.py
saulve/challenges/: advent_of_code.py  base.py  generic.py  in_memory.py
saulve/puzzle/: __init__.py  common.py  core.py  decorators.py
tests/: test_cli.py  test_puzzle.py
tests/challenges/: test_advent_of_code.py  test_generic.py
tests/challenges/fixtures/generic/: contains_puzzle.py  no_puzzle_here.py  other_puzzle.py
tests/import_module/: test_import_module.py  test_module.py
tests/puzzle/: test_core.py  test_decorators.py
