[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "saulve"
version = "0.1dev"
authors = [
  { name="Nicolas Appriou", email="nicolas.appriou@gmail.com" }
]
description = "A framework for computer programming challenges"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "click ~= 8.1",
]

[project.scripts]
saulve = "saulve.cli:cli"

[project.optional-dependencies]
dev = [
  "mypy ~= 0.991",
  "pytest ~= 7.2",
]

[project.urls]
Homepage = "https://github.com/Nicals/saulve"

[tool.setuptools]
packages = ["saulve"]

[tool.mypy]
packages = ["saulve"]
