[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "saulve"
version = "0.1dev"
authors = [
  { name="Nicolas Appriou", email="nicolas.appriou@gmail.com" }
]
description = "A framework for computer programming challenges"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "click ~= 8.1",
]

[project.scripts]
saulve = "saulve.cli:cli"

[project.optional-dependencies]
dev = [
  "mypy ~= 0.991",
  "pytest ~= 7.2",
  "pytest-cov ~= 4.0",
]

[project.urls]
Homepage = "https://github.com/Nicals/saulve"


[tool.setuptools]
packages = ["saulve", "saulve.challenges"]


[tool.mypy]
packages = ["saulve"]

disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_untyped_decorators = true

disallow_any_unimported = true

no_implicit_optional = true

warn_unused_ignores = true


[tool.pytest.ini_options]
testpaths = ["tests"]


[tool.coverage.run]
source = ["saulve"]

[tool.coverage.report]
skip_empty = true
